# eval-ai

./: .gitignore  .project  README.md  docker-compose.yml
evalai-cpp/: .gitignore  CMakeLists.txt  Dockerfile
evalai-cpp/proto/: preprocessing.proto
evalai-cpp/src/: main.cpp
evalai-cpp/src/preprocessing/: Anonymizer.cpp  Anonymizer.h  Deskewer.cpp  Deskewer.h  ImageProcessor.cpp  ImageProcessor.h
evalai-cpp/src/server/: PreprocessingServiceImpl.cpp  PreprocessingServiceImpl.h
evalai-frontend/: index.html  package-lock.json  package.json  vite.config.js
evalai-frontend/src/components/: DataTable.jsx  SearchBar.jsx  Sidebar.jsx  StatCard.jsx  StatusBadge.jsx  Topbar.jsx
evalai-frontend/src/constants/: colors.js
evalai-frontend/src/layouts/: AdminLayout.jsx
evalai-frontend/src/modules/admin/: AdminDashboard.jsx  AdminRoutes.jsx  CreateExam.jsx  CreateSubject.jsx  ExamDetails.jsx  TriggerPipeline.jsx  UploadAnswerSheets.jsx  admin.api.js
evalai-frontend/src/modules/auth/: Login.jsx
evalai-frontend/src/modules/student/: StudentDetails.jsx  student.api.js
evalai-frontend/src/routes/: AppRoutes.jsx  ProtectedRoute.jsx
evalai-frontend/src/services/: api.js
evalai-frontend/src/store/: auth.store.js  exam.store.js  pipeline.store.js  student.store.js
evalai-java/: .env  .gitignore  Dockerfile  pom.xml
evalai-java/src/main/java/com/evalai/main/: EvalAiApplication.java
evalai-java/src/main/java/com/evalai/main/config/: AppConfig.java  CorsConfig.java  SecurityConfig.java
evalai-java/src/main/java/com/evalai/main/controllers/: AdminController.java  AuthController.java  FacultyController.java  PipelineController.java  StudentController.java
evalai-java/src/main/java/com/evalai/main/dtos/: ApiResponse.java  ProcessingContext.java
evalai-java/src/main/java/com/evalai/main/dtos/request/: ExamRequestDTO.java  GrievanceRequestDTO.java  GrievanceReviewRequest.java  LoginRequestDTO.java  ModelAnswerRequestDTO.java  PipelineStartRequestDTO.java  QuestionPaperRequestDTO.java  QuestionRequestDTO.java  RegisterRequestDTO.java  SubQuestionRequestDTO.java  SubjectRequestDTO.java
evalai-java/src/main/java/com/evalai/main/dtos/response/: CallbackPayload.java  EmbeddingResponseDTO.java  ExamResponseDTO.java  GrievanceResponseDTO.java  LoginResponseDTO.java  QuestionPaperResponseDTO.java  RegisterResponseDTO.java  StudentFeedbackResponseDTO.java  StudentGrievanceResponseDTO.java  StudentResultResponseDTO.java  SubjectResponseDTO.java
evalai-java/src/main/java/com/evalai/main/entities/: AnswersheetEntity.java  ExamEntity.java  FeedbackEntity.java  GrievanceEntity.java  ModelAnswerEntity.java  QuestionEntity.java  QuestionPaperEntity.java  ResultEntity.java  StudentAnswer.java  SubQuestionEntity.java  SubjectEntity.java  TaskLogsEntity.java  UserEntity.java
evalai-java/src/main/java/com/evalai/main/enums/: EvaluationStatus.java  ExamStatus.java  FailureReason.java  FeedbackGeneratedBy.java  GrievanceStatus.java  GrievanceType.java  OcrStatus.java  QuestionPaperStatus.java  ResultStatus.java  TaskLogStatus.java  UserRole.java
evalai-java/src/main/java/com/evalai/main/repositories/: AnswersheetRepository.java  ExamRepository.java  FeedbackRepository.java  GrievanceRepository.java  ModelAnswerRepository.java  QuestionPaperRepository.java  QuestionRepository.java  ResultRepository.java  StudentAnswerRepository.java  SubQuestionRepository.java  SubjectRepository.java  TaskLogsRepository.java  UserRepository.java
evalai-java/src/main/java/com/evalai/main/services/: AdminService.java  AuthService.java  FacultyService.java  GrpcService.java  PipelineService.java  PipelineWorkerService.java  PythonService.java  StudentService.java  VectorConverter.java
evalai-java/src/main/java/com/evalai/main/utils/: BadRequestException.java  GlobalExceptionHandler.java  JwtFilter.java  JwtUtils.java
evalai-java/src/main/resources/: application.properties
evalai-java/src/test/java/com/evalai/main/: EvalAiApplicationTests.java
evalai-python/: .env  .gitignore  Dockerfile  Dockerfile.celery  pyproject.toml
evalai-python/app/: main.py
evalai-python/app/api/routes/: embeddings.py  health.py  ocr.py
evalai-python/app/core/: config.py  logger.py
evalai-python/app/proto/: preprocessing_pb2.py  preprocessing_pb2_grpc.py
evalai-python/app/schemas/: embedding_schema.py  ocr_schema.py
evalai-python/app/services/: cpp_client.py  embedding_service.py  feedback_service.py  idempotency_service.py  ocr_service.py  openrouter_ocr_service.py  pipeline.py  scoring_service.py  segmentation_service.py
evalai-python/app/tasks/: celery_app.py  ocr_tasks.py  tasks.py
